@@ -1,4 +1,5 @@
 - 0.8.8
+	* Skip rules filter processing for cache when deactivated
 	* Add match-all flag to rule processing
 	* Add match-all flag to CLI to toggle setting match_all flag to rule processing for include criteria
 - 0.8.7
